# cmake_cheatsheet

./: .gitignore  README.md  main.tex
chapters/: auto_installation.tex  conditionals.tex  deploying.tex  general_commands.tex  include_libraries.tex  main_examples.tex  pybind.tex  testing.tex  variables.tex
config/: code.sty  options.sty  packages.sty
example_project/: CMakeLists.txt  compile_build_run.sh  install_via_pip.sh  pyproject.toml
example_project/cmake/: eigen.cmake  eigen_download.cmake  pybind11.cmake  pybind11_download.cmake
example_project/include/: example.hpp
example_project/src/: example.cpp  example_executable.cpp  pybind_wrapper.cpp
example_project/tests/: CMakeLists.txt  test_vector.cpp
